# TechBooksSummary

./: .template.md  README.md  create_summary.bat  create_summary.sh  install_summary_tools.bat  install_summary_tools.sh
GOF_designPatterns/: 1_Introduction__ben-sembira.md  (+2 more)
OPENSOURCE_arduPilot/: LINK.md
summary_tools/: .gitignore  LICENSE  README.md  chapter_summary_metadata.py  new_summary.py  new_summary_test.py  pyproject.toml
summary_tools/books/: books_search.py  test_book_list.py  test_book_regex.py
summary_tools/chapter_summary/: chapter_summary_metadata.py
summary_tools/filesystem_tools/: directory_tools.py  fs_test_tools.py  test_directory_tools.py
summary_tools/string_tools/: string_tools.py  test_string_tools.py
summary_tools/summary_tools/: new_summary.py  test_new_summary.py
summary_tools/summary_tools/books/: books_search.py  test_book_regex.py
summary_tools/summary_tools/chapter_summary/: chapter_summary_metadata.py
summary_tools/summary_tools/chapters/: chapters.py  chapters_test_tools.py  test_chapters.py
summary_tools/summary_tools/chapters/chapter_summary_metadata/: chapter_summary_metadata.py  test_chapter_summary_metadata.py
summary_tools/summary_tools/filesystem_tools/: test_directory_tools.py
summary_tools/summary_tools/string_tools/: string_tools.py  test_string_tools.py
summary_tools/summary_tools/ui/: ui.py
summary_tools/summary_tools/ui/cli/: cli.py  cli_test_tools.py  colors.py  test_cli.py
summary_tools/tests/: book_list_test.py  book_regex_test.py
summary_tools/ui/: ui.py
summary_tools/ui/cli/: cli.py
(+20 files in other folders)
