[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "summary_tools"
version = "0.1"
authors = [
  { name="Ben Sembira", email="ben.sembira.1@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fire",
]

[project.scripts]
new-tech-book-summary = "summary_tools.new_summary:main"

[project.urls]
"Homepage" = "https://github.com/ben-sembira-1/TechBooksSummary/tree/feature/summary-tools/summary_tools"
"Bug Tracker" = "https://github.com/ben-sembira-1/TechBooksSummary/"
